Bug 340435 - Printing HTML e-mail w/external references incorrectly adds warning message to top of print-out
Summary: Printing HTML e-mail w/external references incorrectly adds warning message t...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.14.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-28 19:30 UTC by graham
Modified: 2017-03-13 16:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description graham 2014-10-28 19:30:08 UTC
When I print an HTML formatted e-mail that contains external image references (e.g. a PayPal receipt), kmail includes the warning message "This HTML message may contain external references...".

I do, however, have KMail configured to display external references in HTML formatted e-mails, and so when viewing the message in KMail I do _not_ see said warning.  Thus, when printing the e-mail, I am expecting that this warning should also _not_ appear.  e.g. if I saw the warning when viewing the message I could understand it also being in the printout, but I'm not seeing it when viewing the message and so I do not want it in the printout either.

Reproducible: Always

Steps to Reproduce:
1. View an HTML formatted e-mail that contains external references to images,
2. Print the message.
3. Look at your printout.

Actual Results:  
Printout displays the warning message.

Expected Results:  
Not printed out the warning message; its not displayed in the View Message screen, so it shouldn't be displayed here either.
Comment 1 graham 2016-06-29 21:01:49 UTC
Noting that this is still an issue on Fedora-24; kmail-5.1.3, KDE Frameworks 5.22.0, Qt 5.6.0.
Comment 2 graham 2016-10-13 15:38:45 UTC
Continues to be an issue in KMail 5.3.0, KDE Frameworks 5.26.0, Qt 5.6.1.

Although this version of KMail has switched to QtWebEngine (and thus has to start an external browser in order to print), the message continues to appear at the top of HTML formatted e-mails.
Comment 3 Laurent Montel 2016-10-14 05:20:35 UTC
Git commit 706ec225ece7d732615917cef2dd000de95690ce by Montel Laurent.
Committed on 14/10/2016 at 05:20.
Pushed by mlaurent into branch 'master'.

Fix Bug 340435 - Printing HTML e-mail w/external references incorrectly adds warning message to top of print-out

FIXED-IN: 5.4.0

M  +1    -1    CMakeLists.txt
M  +2    -1    messageviewer/src/messagepartthemes/default/defaultrenderer.cpp
M  +1    -1    messageviewer/src/messagepartthemes/default/templates/htmlmessagepart.html
M  +5    -0    messageviewer/src/viewer/objecttreeemptysource.cpp
M  +1    -0    messageviewer/src/viewer/objecttreeemptysource.h
M  +5    -0    messageviewer/src/viewer/objecttreeviewersource.cpp
M  +1    -0    messageviewer/src/viewer/objecttreeviewersource.h
M  +3    -0    mimetreeparser/autotests/setupenv.h
M  +2    -0    mimetreeparser/src/interfaces/objecttreesource.h

http://commits.kde.org/messagelib/706ec225ece7d732615917cef2dd000de95690ce
Comment 4 graham 2016-10-14 15:28:59 UTC
laurent++

Thank you!!
Comment 5 graham 2017-03-13 16:07:13 UTC
Got the updated version of KMail here when I installed a new machine with Fedora-25, and I can confirm that this note *no longer* appears at the top of my printouts.

THANK YOU Laurent!  :D