Fix Bug 340435 - Printing HTML e-mail w/external references incorrectly adds warning message to top of print-out

FIXED-IN: 5.4.0
BUG: 340435