mimetreeparser/autotests/setupenv.h
@@ -154,6 +154,9 @@ public:
         Q_UNUSED(msgPart);
         return  Interface::MessagePartRenderer::Ptr();
     }
+    bool isPrinting() const Q_DECL_OVERRIDE {
+        return false;
+    }
 private:
     MimeTreeParser::HtmlWriter *mWriter;
     QString mAttachmentStrategy;
